--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Michel S.
-logo: /Portfolio/images/foto.JPG
+logo: assets/images/foto.JPG
 description: Aspiring Data Analyst | Business Economist (Business Informatics) | Experience in Leadership, Communication & Process Optimization
 #show_downloads: true
 theme: jekyll-theme-minimal
